getter and setter for curr session added
1.Added table manualy to database: EntityCurrentSession with only one field: curr_id
2. Added setter and getter for getting and updating curr_id in db
3. Added api get and set functions to swagger.json file
